--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1836,6 +1836,290 @@ input:-webkit-autofill:focus {
     gap: 10px 20px;
 }
 
+.sidebar {
+    width: 250px;
+    padding: 40px;
+    height: 100vh;
+    height: 100%;
+    border-right: 1px solid hsl(var(--border));
+}
+
+.sidebar-top {
+    margin-bottom: 60px;
+}
+
+.sidebar-top .title {
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.sidebar-top p {
+    font-weight: 500;
+}
+
+.sidebar-menu {
+    margin-bottom: auto;
+}
+
+.sidebar-menu li {
+    padding: 20px 0;
+    font-weight: 700;
+}
+
+.sidebar-menu li:not(:first-child) i {
+    font-size: 20px;
+}
+
+.sidebar-menu li a {
+    transition: all ease 0.3s;
+}
+
+.sidebar-menu li a i {
+    padding-right: 10px;
+}
+
+.sidebar-menu li a.active {
+    color: hsl(var(--base));
+}
+
+.user-wrapper {
+    margin-top: auto !important;
+}
+
+.body-content {
+    width: calc(100% - 250px);
+}
+
+.header-top,
+.bottom-content {
+    padding: 20px;
+}
+
+.header-left .icon {
+    cursor: pointer;
+}
+
+.header-left .date {
+    padding-left: 20px;
+}
+
+.header-left .date .form--control {
+    width: 69px;
+    height: 36px !important;
+}
+
+.header-left .date .arrow-bottom {
+    padding-left: 15px;
+}
+
+.header-right a {
+    border: 2px solid hsl(var(--border));
+    border-radius: 6px;
+    display: block;
+}
+
+.header-right a.active {
+    border-color: hsl(var(--base));
+}
+
+.header-right .card-item-info {
+    padding: 10px;
+    width: 192px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.header-right .card-item-info .thumb {
+    width: 40px;
+}
+
+.header-right .card-item-info .thumb img {
+    width: 100%;
+}
+
+.header-right .card-item-info .content {
+    width: calc(100% - 40px);
+    padding-left: 10px;
+}
+
+.header-right .card-item-info .content p {
+    font-size: 16px;
+    font-weight: 500;
+    color: hsl(var(--body));
+}
+
+.tab-task {
+    gap: 20px;
+}
+
+.bottom-content {
+    background-color: #edf0f3;
+    overflow: hidden;
+    height: 100%;
+}
+
+.content-top {
+    margin-bottom: 20px;
+}
+
+.content-top .content-left .form--control {
+    background-color: transparent;
+    width: 150px;
+    border: none;
+    font-weight: 700;
+    height: 35px;
+    padding-top: 0;
+    padding-bottom: 0;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+.content-top .content-right {
+    margin: 0 -10px;
+}
+
+.content-top .content-right span {
+    padding: 0 5px;
+    cursor: pointer;
+    font-size: 20px;
+    line-height: 1;
+}
+
+.date-shape {
+    position: relative;
+    overflow: hidden;
+    padding-left: 15px;
+    margin: 30px 0;
+    font-size: 20px;
+}
+
+.date-shape::before {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 1px;
+    top: 50%;
+    left: 75px;
+    right: 100px;
+    transform: translateY(-50%);
+    background-color: #cfd2d6;
+}
+
+.faq-main-wrapper {
+    margin: -10px;
+}
+
+.faq-wrapper {
+    width: 50%;
+    padding: 10px;
+}
+
+.faq-wrapper .faq-item {
+    background-color: hsl(var(--white));
+    padding: 10px 20px;
+    border-radius: 10px;
+}
+
+.faq-wrapper .faq-item__header {
+    padding: 5px 0;
+    cursor: pointer;
+    margin-bottom: 12px;
+}
+
+.faq-wrapper .faq-item__header .title {
+    font-weight: 600;
+    font-size: 20px;
+    color: #707377;
+}
+
+.faq-wrapper .faq-item__header .title span {
+    font-size: 36px;
+    font-weight: 700;
+    color: hsl(var(--heading));
+}
+
+.faq-wrapper .faq-item__header .progress-custom {
+    height: 40px;
+    width: 95px;
+    border-radius: 25px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.faq-wrapper .faq-item__header .progress-custom.style-two {
+    position: relative;
+    z-index: 1;
+}
+
+.faq-wrapper .faq-item__header .progress-custom.style-two::before {
+    position: absolute;
+    content: "";
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 60%;
+    background-color: #106FDF;
+    z-index: -1;
+}
+
+.video-content {
+    padding: 20px 0px;
+    border-top: 1px solid hsl(var(--border));
+    border-top: 1px solid hsl(var(--border));
+    position: relative;
+}
+
+.video-content .title {
+    margin-bottom: 10px;
+}
+
+.video-content .content {
+    width: calc(100% - 22px);
+    padding-right: 20px;
+}
+
+.video-content .content.list-pl {
+    padding-left: 20px;
+}
+
+.video-content .content li {
+    list-style: disc;
+}
+
+.video-content .content li:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+.video-content .content span {
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.video-content .content a {
+    display: initial;
+}
+
+.video-content .checkbox-right {
+    width: 22px;
+    display: block;
+}
+
+.video-content .checkbox-right.style-two {
+    position: absolute;
+    right: 0px;
+}
+
+.video-content .checkbox {
+    width: 20px;
+    height: 20px;
+    border: 2px solid #949595;
+    border-radius: 2px;
+}
+
 .banner-section {
     padding: 100px 0;
     position: relative;
