--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
+
 .account-wrapper, .menu, .list.list-column, .pagination {
     display: flex;
     flex-wrap: wrap;
@@ -719,6 +721,29 @@ h6 {
     .cmn--btn {
         padding-inline: 50px;
     }
+}
+
+.btn--base.active {
+    background-color: transparent;
+    color: hsl(var(--base));
+    border-color: hsl(var(--base));
+}
+
+.btn--base.active:hover {
+    background-color: hsl(var(--base));
+    color: hsl(var(--white));
+}
+
+.btn-modal {
+    padding: 12px;
+    font-size: 16px;
+}
+
+.modal-btn-close {
+    border: 1px solid hsl(var(--border));
+    font-size: 14px;
+    right: 30px;
+    position: absolute;
 }
 
 .badge--base {
@@ -1885,8 +1910,22 @@ input:-webkit-autofill:focus {
     top: 10px;
 }
 
+.sidebar-toggler {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+}
+
+@media (max-width: 575px) {
+    .sidebar-toggler {
+        top: 10px;
+        right: 15px;
+    }
+}
+
 .sidebar-top {
     margin-bottom: 55px;
+    position: relative;
 }
 
 @media (max-width: 991px) {
@@ -1971,6 +2010,12 @@ input:-webkit-autofill:focus {
     }
 }
 
+@media (max-width: 1399px) {
+    .header-left {
+        margin-bottom: 20px;
+    }
+}
+
 .header-left .icon {
     cursor: pointer;
 }
@@ -2005,8 +2050,22 @@ input:-webkit-autofill:focus {
     flex-wrap: wrap;
 }
 
+@media (max-width: 575px) {
+    .header-right .card-item-info {
+        width: 110px;
+        padding: 5px 8px;
+    }
+}
+
 .header-right .card-item-info .thumb {
     width: 40px;
+}
+
+@media (max-width: 575px) {
+    .header-right .card-item-info .thumb {
+        width: 30px;
+        margin-bottom: 2px;
+    }
 }
 
 .header-right .card-item-info .thumb img {
@@ -2018,14 +2077,51 @@ input:-webkit-autofill:focus {
     padding-left: 10px;
 }
 
+@media (max-width: 575px) {
+    .header-right .card-item-info .content {
+        width: 100%;
+        padding-left: 0 !important;
+    }
+}
+
+@media (max-width: 575px) {
+    .header-right .card-item-info .content .title {
+        font-size: 16px;
+    }
+}
+
 .header-right .card-item-info .content p {
     font-size: 16px;
     font-weight: 500;
     color: hsl(var(--body));
 }
 
+@media (max-width: 1199px) {
+    .header-right .card-item-info .content p {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 575px) {
+    .header-right .card-item-info .content p {
+        font-size: 12px;
+    }
+}
+
 .tab-task {
-    gap: 20px;
+    gap: 10px 20px;
+}
+
+@media (max-width: 575px) {
+    .tab-task {
+        gap: 7px;
+    }
+}
+
+@media (max-width: 991px) {
+    .tab-task li a {
+        padding: 0;
+    }
 }
 
 .bottom-content {
@@ -2052,6 +2148,14 @@ input:-webkit-autofill:focus {
 
 .content-top .content-right {
     margin: 0 -10px;
+}
+
+.content-top .content-right li a {
+    color: hsl(var(--body));
+}
+
+.content-top .content-right li a.active {
+    color: hsl(var(--base));
 }
 
 .content-top .content-right span {
@@ -2090,16 +2194,27 @@ input:-webkit-autofill:focus {
     padding: 10px;
 }
 
+@media (max-width: 991px) {
+    .faq-wrapper {
+        width: 100%;
+    }
+}
+
 .faq-wrapper .faq-item {
     background-color: hsl(var(--white));
     padding: 10px 20px;
     border-radius: 10px;
 }
 
+@media (max-width: 1399px) {
+    .faq-wrapper .faq-item {
+        padding: 10px;
+    }
+}
+
 .faq-wrapper .faq-item__header {
     padding: 5px 0;
     cursor: pointer;
-    margin-bottom: 12px;
 }
 
 .faq-wrapper .faq-item__header .title {
@@ -2108,38 +2223,48 @@ input:-webkit-autofill:focus {
     color: #707377;
 }
 
+@media (max-width: 1399px) {
+    .faq-wrapper .faq-item__header .title {
+        font-size: 18px;
+    }
+}
+
 .faq-wrapper .faq-item__header .title span {
     font-size: 36px;
     font-weight: 700;
     color: hsl(var(--heading));
 }
 
+@media (max-width: 1399px) {
+    .faq-wrapper .faq-item__header .title span {
+        font-size: 28px;
+    }
+}
+
 .faq-wrapper .faq-item__header .progress-custom {
     height: 40px;
     width: 95px;
     border-radius: 25px;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     font-size: 20px;
     font-weight: 600;
-}
-
-.faq-wrapper .faq-item__header .progress-custom.style-two {
+    text-align: center;
     position: relative;
-    z-index: 1;
 }
 
-.faq-wrapper .faq-item__header .progress-custom.style-two::before {
+.faq-wrapper .faq-item__header .progress-custom .percentage {
     position: absolute;
-    content: "";
-    left: 0;
-    top: 0;
-    bottom: 0;
-    width: 60%;
-    background-color: #106fdf;
-    z-index: -1;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    color: hsl(var(--white));
+}
+
+.faq-wrapper .faq-item__header .progress-custom .progress-bar {
+    height: 100% !important;
+}
+
+.faq-wrapper .faq-item__content .video-content:first-child {
+    margin-top: 10px;
 }
 
 .video-content {
@@ -2149,8 +2274,17 @@ input:-webkit-autofill:focus {
     position: relative;
 }
 
-.video-content .title {
+.video-content .left .title {
     margin-bottom: 10px;
+    max-width: 600px;
+    display: block;
+}
+
+@media (max-width: 1399px) {
+    .video-content .left .title {
+        max-width: 450px;
+        font-size: 16px;
+    }
 }
 
 .video-content .content {
@@ -2160,6 +2294,12 @@ input:-webkit-autofill:focus {
 
 .video-content .content.list-pl {
     padding-left: 20px;
+}
+
+@media (max-width: 1199px) {
+    .video-content .content.list-pl {
+        font-size: 14px;
+    }
 }
 
 .video-content .content li {
@@ -2196,6 +2336,25 @@ input:-webkit-autofill:focus {
     border-radius: 2px;
 }
 
+.popup-wrapper {
+    max-width: 415px;
+    padding: 80px 32px;
+    border-radius: 4px;
+    background-color: hsl(var(--white));
+    position: relative;
+}
+
+@media (max-width: 1399px) {
+    .popup-wrapper {
+        padding: 50px 30px;
+    }
+}
+
+@media (max-width: 991px) {
+    .popup-wrapper {
+        padding: 30px;
+    }
+}
 /* Hide all steps by default: */
 .tab {
     display: none;
@@ -2957,6 +3116,289 @@ input:-webkit-autofill:focus {
     font-weight: 500;
     margin: 0 auto 12px;
     max-width: 232px;
+}
+
+.exam-top {
+    margin-bottom: 50px;
+}
+
+.exam-top .title {
+    margin-bottom: 25px;
+    font-size: 40px;
+}
+
+@media (max-width: 1199px) {
+    .exam-top .title {
+        font-size: 35px;
+    }
+}
+
+@media (max-width: 991px) {
+    .exam-top .title {
+        font-size: 32px;
+        margin-bottom: 40px;
+    }
+}
+
+@media (max-width: 575px) {
+    .exam-top .title {
+        font-size: 24px;
+        margin-bottom: -7px;
+    }
+}
+
+.exam-top .title span {
+    color: #656565;
+}
+
+.d-none {
+    display: none;
+}
+
+/* Make circles that indicate the steps of the form: */
+.step {
+    height: 10px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: hsl(var(--base));
+    border: none;
+    border-radius: 50%;
+    display: inline-block;
+    opacity: 0.11;
+}
+
+.step.finish {
+    background-color: hsl(var(--base));
+    opacity: 1;
+}
+
+.step.active {
+    opacity: 1;
+}
+
+.exam-section {
+    padding-top: 50px;
+    padding-bottom: 200px;
+    position: relative;
+    z-index: 1;
+}
+
+@media (max-width: 1199px) {
+    .exam-section {
+        padding-bottom: 100px;
+        padding-top: 40px;
+    }
+}
+
+@media (max-width: 575px) {
+    .exam-section {
+        padding-bottom: 70px;
+        padding-top: 10px;
+    }
+}
+
+.exam-shapes .shape1 {
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    bottom: 0;
+}
+
+.exam-shapes .shape2 {
+    position: absolute;
+    z-index: -1;
+    right: 0;
+    bottom: 0;
+}
+
+.eaxm-wrapper {
+    max-width: 1100px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.eaxm-wrapper .exam-item {
+    padding: 20px 20px 30px;
+    border-radius: 11px;
+    border: 1px solid hsl(var(--border));
+    background-color: hsl(var(--white));
+}
+
+@media (max-width: 1199px) {
+    .eaxm-wrapper .exam-item .text {
+        margin-bottom: 10px;
+    }
+}
+
+.eaxm-wrapper .exam-item:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+.eaxm-wrapper .exam-item .title {
+    margin-bottom: 20px;
+}
+
+@media (max-width: 575px) {
+    .eaxm-wrapper .exam-item .title {
+        margin-bottom: 15px;
+    }
+}
+
+.eaxm-wrapper .exam-item .exam-select {
+    gap: 0 55px;
+}
+
+@media (max-width: 1199px) {
+    .eaxm-wrapper .exam-item .exam-select {
+        gap: 0 45px;
+    }
+}
+
+@media (max-width: 991px) {
+    .eaxm-wrapper .exam-item .exam-select {
+        gap: 0px 30px;
+    }
+}
+
+@media (max-width: 575px) {
+    .eaxm-wrapper .exam-item .exam-select {
+        gap: 5px 20px;
+    }
+}
+
+.eaxm-wrapper .exam-item .exam-select .form-group {
+    display: flex;
+    align-items: center;
+}
+
+.eaxm-wrapper .exam-item .exam-select input {
+    padding-inline: 5px;
+    width: 17.5px;
+    height: 17.5px;
+}
+
+@media (max-width: 1199px) {
+    .eaxm-wrapper .exam-item .exam-select input {
+        padding: 0;
+    }
+}
+
+@media (max-width: 991px) {
+    .eaxm-wrapper .exam-item .exam-select input {
+        width: 15px;
+        height: 15px;
+    }
+}
+
+.eaxm-wrapper .exam-item .exam-select label {
+    font-family: "Inter", sans-serif;
+    font-size: 20px;
+    line-height: 1;
+    padding-left: 20px;
+}
+
+@media (max-width: 1199px) {
+    .eaxm-wrapper .exam-item .exam-select label {
+        font-size: 18px;
+        padding-left: 15px;
+    }
+}
+
+@media (max-width: 991px) {
+    .eaxm-wrapper .exam-item .exam-select label {
+        padding-left: 10px;
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 575px) {
+    .eaxm-wrapper .exam-item .exam-select label {
+        padding-left: 5px;
+    }
+}
+
+.progress-exam {
+    position: absolute;
+    left: 50%;
+    top: -80px;
+    transform: translateX(-50%);
+    border-radius: 15px;
+    overflow: hidden;
+    display: flex;
+    margin-inline: 0;
+    padding: 0;
+}
+
+@media (max-width: 991px) {
+    .progress-exam {
+        top: -75px;
+    }
+}
+
+.progress-exam .step {
+    border-radius: 0;
+    margin-inline: 0;
+    width: 100px;
+}
+
+@media (max-width: 991px) {
+    .progress-exam .step {
+        width: 70px;
+    }
+}
+
+@media (max-width: 575px) {
+    .progress-exam .step {
+        width: 50px;
+    }
+}
+
+.next-pre-wrapper {
+    gap: 20px;
+    margin-top: 18px;
+}
+
+.next-pre-wrapper .btn-modal {
+    width: 210px;
+    height: 52px;
+    line-height: 52px;
+    padding: 0;
+}
+
+@media (max-width: 575px) {
+    .next-pre-wrapper .btn-modal {
+        width: 100px;
+        height: 42px;
+        line-height: 42px;
+    }
+}
+
+.download-wrapper {
+    gap: 10px;
+    padding-left: 20px;
+    margin-bottom: 10px;
+}
+
+.download-wrapper .thumb {
+    position: relative;
+}
+
+.icon-wrapper {
+    position: absolute;
+    right: 8px;
+    top: 7px;
+    gap: 6px;
+}
+
+.icon-wrapper li {
+    width: 22px;
+    height: 22px;
+    line-height: 22px;
+    border-radius: 4px;
+    text-align: center;
+    font-size: 14px;
+    background-color: hsl(var(--white));
+    cursor: pointer;
 }
 
 .account-section {
