--- a/src/assets/sass/sections/_banner.scss
+++ b/src/assets/sass/sections/_banner.scss
@@ -2,8 +2,8 @@
 .banner-section {
 	padding: 100px 0;
 	position: relative;
-	@include breakpoint(max-lg) {
-		padding: 50px 0;
+	@include breakpoint(max-xxl) {
+		padding: 40px 0;
 	}
 	@include breakpoint(max-md) {
 		padding: 30px 0;
@@ -15,7 +15,8 @@
 	top: 100px;
 	max-width: 700px;
 	@include breakpoint(max-xxl) {
-		max-width: 550px;
+		max-width: 450px;
+		top: 50px;
 	}
 	@include breakpoint(max-xl) {
 		max-width: 450px;
@@ -48,6 +49,11 @@
 		width: 120px;
 		height: 120px;
 		margin-bottom: 30px;
+		@include breakpoint(max-xxl) {
+			width: 80px;
+			height: 80px;
+			margin-bottom: 20px;
+		}
 		@include breakpoint(max-lg) {
 			margin-inline: auto;
 		}
@@ -63,6 +69,9 @@
 		font-size: 20px;
 		font-weight: 500;
 		max-width: 290px;
+		@include breakpoint(max-xxl) {
+			font-size: 18px;
+		}
 		@include breakpoint(max-lg) {
 			margin-inline: auto;
 			max-width: 300px;
@@ -71,19 +80,25 @@
 	&__title {
 		margin: 40px 0;
 		position: relative;
-		@include breakpoint(max-xl) {
-			margin-top: 25px;
+		@include breakpoint(max-xxl) {
+			margin-top: 15px;
+			margin-bottom: 25px;
 		}
 	}
 	.btn {
 		margin-top: 40px;
+		@include breakpoint(max-xxl) {
+			margin-top: 30px;
+		}
 	}
 	.shape {
 		position: absolute;
 		bottom: -42px;
 		transform: rotate(-7deg);
 		left: 222px;
-
+		@include breakpoint(max-xxl) {
+			bottom: -20px;
+		}
 		@include breakpoint(max-md) {
 			bottom: -40px;
 		}
@@ -99,6 +114,11 @@
 	background: #ffffff;
 	border: 1px solid hsl(var(--border));
 	border-radius: 6px;
+	.title {
+		@include breakpoint(max-xxl) {
+			font-size: 20px;
+		}
+	}
 	.date-form-group {
 		margin-top: 20px;
 	}
